Update 4.Phishing Challenge Capstone .md

--- a/4.Phishing Challenge Capstone .md
+++ b/4.Phishing Challenge Capstone .md
@@ -1,1 +1,116 @@
+# Detection-Lab - Phishing Challenge Capstone
 
+## Objective
+
+Complete a phishing challenge by conducting investigations, gathering artifacts, and writing reports for two identified malicious emails. Submit collected artifacts for checking via the questions tab of the lab client.
+
+
+### Skills Learned
+
+- Comprehensive understanding of phishing response protocols and procedures.
+- Proficient investigation techniques for identifying malicious emails.
+- Collection and analysis of artifacts from suspicious emails.
+- Report writing for documenting findings and actions taken in response to phishing incidents.
+- Submission of collected artifacts for validation and further analysis.
+
+### Tools Used
+
+- Email analysis tools for examining headers, content, and attachments.
+- Artifact collection tools for gathering relevant data.
+- Documentation tools for writing detailed reports.
+- Lab client interface for submitting collected artifacts and responses for validation.
+
+
+## Steps
+
+![5cb8417d54e79194392f474121e1e07feab414b1de9d3aa600240cf327ba725d346d1536ae6e12c43a16dfae9571](https://github.com/ayalasecurity/Detection-Lab/assets/157613993/5f58a3a2-3c9c-4296-bbea-d7a9f4609141)
+- It was immediately clear to me that this email was highly suspicious:
+  - The sending address was set as ‘auto-confirm.info-amazon.co.uk’ (where info-amazon.co.uk is the domain, not amazon.co.uk), but upon inspection, it was actually coming from QPE77756@mun.ca - this definitely wasn't Amazon.
+  - The formatting and styling were inconsistent - emails from huge brands such as Amazon are typically well-styled and do not use varying fonts.
+  - The email was not addressed to a specific person, which is often seen in legitimate emails; instead, it was addressed to a generic recipient ‘Amazon user.’
+  - The email featured poor and incorrect grammar, such as ‘Your ID’ (which should have been ‘your account’) and ‘From Amazon Store.’
+  - It had an obvious call-to-action button, enticing the user to click on the link for the ‘Help Page - Refund Form’ (while legitimate emails do use call-to-actions, this one seemed to be part of phishing with URLs).
+
+![b9319fd06f75f7fdf6405d20bf08efd2937d52c658ea7db35aaf492bfb46e72da74b67b821d00df0793ae13fa463](https://github.com/ayalasecurity/Detection-Lab/assets/157613993/c2e3aec0-5753-4a9c-8a3a-fdba72972081)
+- If I thought this email was malicious, I might have been rushing my analysis. Let's consider a few points:
+  - The email is spam-themed, attempting to convince non-technical users that they are going to receive a portion of someone's lottery winnings.
+  - It is not addressed directly to the recipient, suggesting it is being mass-mailed to a large list of people.
+  - There is a URL in the body, but it is not hyperlinked. A quick Google search reveals that ‘thescottishsun[.]co[.]uk’ is a legitimate news site and is not malicious.
+  - The email provides an email address to contact that is different from the sender.
+- Based on this information, this email does not appear to be malicious. It should be classified as spam or a scam as it tries to convince recipients to send personal details to a Gmail address, using the story behind a legitimate news article regarding lottery winners in Scotland.
+
+![b84844779cdc76783986f513835bcb9197473bd5ba9132bf976d6e2fadbd8477b8bab720505755d8b28242344766](https://github.com/ayalasecurity/Detection-Lab/assets/157613993/64839704-bc47-41fb-b0eb-eb51da236a76)
+- The sender was a Gmail address, despite the email claiming to be from the UK's National Health Service.
+The image used in the email was a generic stock image and didn't show any NHS or UK Government branding to match the theme of the email.
+- The email was addressed to a generic recipient ‘Sir/Madam’.
+- The email instructed the recipient to open the attached file (call-to-action).
+- A sense of urgency was created to generate an emotional response using the sentence ‘If you do not act soon, we will give your slot to someone else’ - this was an attempt to make people act quicker than they could think.
+- The attachment was named ‘MALICIOUS ATTACHMENT REMOVED - SBT.txt’. This was extremely unlikely to be the name of the real attachment - some Email Gateways have the ability to strip out and replace attachments to let recipients know it was malicious.
+- As the attachment was just a text file, I could open it without fear of malicious code execution.
+
+![1ccc38b28b364a6b5a484fde960e81ac8f0437c1a8d584b863866e277a23ac9b74bd80d88937f4ac706f9ee75538](https://github.com/ayalasecurity/Detection-Lab/assets/157613993/7bf24cf3-d297-405e-859c-f22459bee83e)
+- This informed me that the attachment was indeed malicious, and it was actually an executable disguised as a PDF using the double extension ‘.pdf.exe’.
+
+![35e4cedda338d5a309a4939bd79cb8104300ee0e1a23dc25cb2fa81a4c6348e87c5e189ba5ee14f87689b2c77308](https://github.com/ayalasecurity/Detection-Lab/assets/157613993/bd52dabf-a574-460b-8ceb-08fa2e229de7)
+- Based on the sender, styling, theme, and purpose of this email, I would classify it as spam or a newsletter. The email doesn't use a real call-to-action despite containing a number of hyperlinks. Further analysis of the links could be conducted using tools such as URL2PNG or WHOis, along with reputation checks on the domain. However, over time, you'll learn to understand what is suspicious and what is just spam.
+
+
+![9141d85f99567b8d4232dcea98291b204cf87b8e6e936e4ea15be50deb77694d1d4d716bba598003d6b78fec1487](https://github.com/ayalasecurity/Detection-Lab/assets/157613993/1d77add4-e976-4e27-98f1-6d03538ba605)
+- As with email four, we saw the same techniques being used in this one. While some parts of this email seemed suspicious, such as the Reply-to address being set as ‘dfsdf’ and the subject line being misleading to individuals who aren't familiar with cryptocurrencies or investing, this was another spam email attempting to convince people to sign up to begin trading cryptocurrencies. It wasn't inherently malicious, but it should be avoided.
+
+
+![25dd77632c48891c888d02f7ef0b7a48e13963257c2ab366985d1a05bb6046280e07870a2a6c3bcafe94d31aae01](https://github.com/ayalasecurity/Detection-Lab/assets/157613993/f8f99538-139a-4b3e-9102-6e287f81706c)
+- Opening Email One in Sublime Text and searching for (CTRL+F) ‘From’, I found the sending email address, which was contained within the <> symbols at the end of the line (everything before this was just a friendly name that could be set as anything; only the final part mattered!).
+
+
+![afca1cbf49afe2b0abfa21f9e4da31562f3af9b2248c0087bc21ac5359131d816c2da1781f1fbed85a4ac5ae2f4a](https://github.com/ayalasecurity/Detection-Lab/assets/157613993/ffa20bea-b31f-4e3f-af49-6b503ebf4098)
+- A few lines below, or by searching for ‘Subject’ I could find the subject line.
+
+![0e790697804cb7953086a0414a80111d4a3eeeebefae20ec5ccfe2cbefc1b92d4a6c603ec420864529e798ee8a9b](https://github.com/ayalasecurity/Detection-Lab/assets/157613993/45d0c68b-3732-4fb4-b2ff-97f75dfeb504)
+- Looking at line 42 I could see the email is being sent to jack.tractive@abcindustries.co.uk.
+- Searching for ‘reply’ or ‘reply-to’ gave me no results, so I got in the answer as ‘none’.
+
+![d7b6629db846d1c5a6472ab23b3bf730090c250979349a39dbd7ecc78411f4986aa1f2717f619d5ce374bd15f50b](https://github.com/ayalasecurity/Detection-Lab/assets/157613993/07a9b012-336d-4d70-b441-37188876ccb2)
+- Searching for ‘Date’ in text editor  showed me the timestamp of the email.
+
+![cc66a8c5a28b0ce2f0e42f83d0278a2ec23d92e433ea018903bfbf5c45d79e29ea22efe1c0fe80f6ab7cf1a0c49b](https://github.com/ayalasecurity/Detection-Lab/assets/157613993/f8853dfc-f7ab-4529-afd7-f20040d25b5d)
+- Searching for the string ‘Sender’, I could see a number of references to the same IP address, including a mention of SPF checks that came back positive for this IP.
+
+![1657d5f76bc19ea420b46677f56e24fd8ac4ab9ae4ee488e7e025a0573a203c688ff5498368613ba818225144b5f](https://github.com/ayalasecurity/Detection-Lab/assets/157613993/8aaed842-f585-4252-9a4f-a5e4da4a5568)
+- Searching for the sender IP 68.114.190.29 on https://whois.domaintools.com didn't show me a hostname and stated that the IP was owned by ‘United States Ashburn Charter Communications’. It seemed that this IP was no longer owned by an individual company, so I couldn't get the hostname from there. While IP ownership can change, we always have the original information preserved within the email file.Searching for the IP in the text editor, I found the following information, giving me the hostname of the sending server: [Provide the relevant information found in the text editor here].
+
+![ed7704bec2f81bb35f63a1e882bc614a8c075265c3bc71e752db9e4966b3c8dc68fef9ae3a20ae9c078c2983e4d1](https://github.com/ayalasecurity/Detection-Lab/assets/157613993/af96e3e1-67d1-4803-a0fd-571a11ade946)
+![00ac2c0303da4239d91c4d1e57fe4c6661875ec2380880bf797a530750bcf832bb84df496ee8ed833543835a79c0](https://github.com/ayalasecurity/Detection-Lab/assets/157613993/fdf7a776-c834-46ab-9029-323e012e30a8)
+- Based on the formatting of the URL and the theme/intent of the email, it was very likely to be a credential harvester. In this scenario, the email address on the fake Amazon login screen would be auto-filled (to make it seem more legitimate) by the email argument provided in the URL. This was speculation until further investigation was conducted, but over time I would learn to understand attacks based on themes and techniques used.
+
+![3117e611026b04b26d419231f9db0e4cf902bafebb7ec5d5c6a1b3b3baebb42147c6d9fc8dd4ddd47ce71aae569f](https://github.com/ayalasecurity/Detection-Lab/assets/157613993/a2de6977-af81-4b84-af52-8afb63f1d2d1)
+- Opening the email in a text editor, we'll use CTRL+F to search for the ‘From’ property.
+
+![fd3b4a23f1403c6f871f03a5a419cfbedb38bf8042008c592efb20bd415329c020c6f280d0346faad071b46d969d](https://github.com/ayalasecurity/Detection-Lab/assets/157613993/b73e679b-95fd-4d35-a935-1e854474c1cf)
+- Looking down a few lines or searching for ‘Subject’ gave me the value.
+
+![adfd097e87536c87820e83a418e578f3851b04b873fb0231b9a09e07c052778b849af8cf21babf71fa794f3277a7](https://github.com/ayalasecurity/Detection-Lab/assets/157613993/32e5d247-6534-4d8d-92a2-4bf2e88740f4)
+- Searching for the ‘To’ property I could find one recipient listed.
+- Searching for ‘Reply’ or ‘Reply-to’ shows no results, so this email didn't use a reply-to address to receive replies.
+
+![a87d53023e21951e49200d8e165f100b0afb620a5320b00c3d2c396e9b134ce7c5261cb6acf6d2a0b827cda862df](https://github.com/ayalasecurity/Detection-Lab/assets/157613993/5f6aefec-d5cf-45a2-a60f-77cd8216f843)
+- Searching for ‘Date’ gave me the timestamp of the email.
+
+![3a9ca66725855bf0e7822d62160eb1d64cd76b1d4af67c67911db65e8c2429c46cf91fb0e8bbdea6d722432422f0](https://github.com/ayalasecurity/Detection-Lab/assets/157613993/e39be582-8ed5-46b3-8943-69599d90fd8d)
+- Searching for ‘Sender’ I could find the sending server's IP address.
+
+![457a05adc27ddc55d3c90e6e0e1c3eb20a54e3e5b2cfb7914bee2bc95b5314a00018a3daa028274a97a7d35f9c1d](https://github.com/ayalasecurity/Detection-Lab/assets/157613993/c6458ab2-e1fc-44ac-8c8c-52a3c07e4f87)
+- Searching for the IP address on Domain Tools WHOis lookup, I could see the resolved host is a Gmail sending server, owned by Google.
+
+![fb62874dd5491dc35445b738d60844ab9b583067ecc0f5e149b071b39648b67e5a7d3c23b48267b9bfa75aaf7f18](https://github.com/ayalasecurity/Detection-Lab/assets/157613993/d89c1c0c-e8e1-4d15-b809-4086d76f8238)
+- Typically, I would retrieve the filename and extension that is shown in the email client (but could also be found in a text editor by looking through the body content at the end of the file). In this scenario, we had ‘removed’ the malicious file, which some email gateways can do. In the below screenshot, you can see our dummy attachment within the eml file itself.
+
+![fb62874dd5491dc35445b738d60844ab9b583067ecc0f5e149b071b39648b67e5a7d3c23b48267b9bfa75aaf7f18](https://github.com/ayalasecurity/Detection-Lab/assets/157613993/045d4858-74de-4650-8a95-1c3727e3cb46)
+![10d2476d5fdf85559b59d52056bccbd062660d93adb7ae0731757fba9e4d6696a3fd9d4d766f92770748b486edf7](https://github.com/ayalasecurity/Detection-Lab/assets/157613993/0ea45b4b-c30d-4048-80b0-dbfcb8797551)
+- Looking in the Thunderbird client, I could see the attachment shown at the bottom of the window (although most email clients like Outlook and Gmail display attachments at the top of an email). In this scenario, I needed to submit the ‘real’ name of the attachment that was removed by our email gateway, which could be found within the text file attachment.
+
+
+
+- *Ref 1: Phishing Response Brief lesson materials provided.*
+- *Ref 2: Lab client interface for submission guidelines and instructions.*
+- *Ref 3: Knowledge of TXT file format limitations in terms of inherent maliciousness.*
