Update 1.Categorizing Phishing Emails.md

--- a/1.Categorizing Phishing Emails.md
+++ b/1.Categorizing Phishing Emails.md
@@ -29,4 +29,6 @@ In this project, my objective was to enhance my skills in analyzing and categori
 - The first thing I noticed about this email was the subject line, which created a sense of urgency, a tactic often employed by malicious emails. Additionally, the email contained an attachment, which warranted caution as it could potentially be malicious. Furthermore, the sending address was a Gmail address, which seemed highly suspicious, especially considering the email claimed to be from a 'Finance and Collection Department' of a company. Based on this information, it appeared to be a malicious attachment email, wherein the email recipient was being persuaded to open the attached docx file (which could potentially contain malicious macros or a link to a malicious website) by asserting there would be financial consequences to the company.
 
 
-*Ref 1: Thunderbird Client Email*
+
+- *Ref 1:Guidance provided within the activity instructions.*
+- *Ref 2:Understanding of phishing email categories and investigation methods covered in the domain material.*
